# full-stack-rust

./: README.md
client/: .gitignore  Cargo.toml  Trunk.toml  global.css  index.html  package-lock.json  package.json
client/src/: context.rs  lib.rs  main.rs  router.rs  store.rs
client/src/api/: mod.rs  types.rs  user.rs
client/src/components/: card.rs  form_input.rs  loading_button.rs  mod.rs  modal.rs  spinner.rs
client/src/components/layouts/: header.rs  mod.rs  user_context_provider.rs
client/src/pages/: home.rs  login.rs  mod.rs  notfound.rs  setting.rs
client/static/styles/: global.css
server/: .gitignore  .local.env  Cargo.toml
server/migrations/: 20230214175458_init.down.sql  20230214175458_init.up.sql
server/src/: main.rs  router.rs  security.rs
server/src/api/: story.rs
server/src/config/: mod.rs
server/src/middleware/: auth.rs
server/src/models/: story.rs  user.rs
server/src/repository/: story.rs  user.rs
server/src/routes/: api.rs
server/src/schema/: story.rs  user.rs
server/src/security/: auth.rs
server/src/services/: story.rs
server/src/utils/: handler_error.rs  handler_response.rs  mod.rs
