[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "*"
actix-identity = "*"
actix-session = { version = "*", features = ["redis-rs-session"] }
actix-web = "*"
actix-cors = "*"
jsonwebtoken = "*"
rust-argon2 = "*"
base64 = "0.21.0"
redis = "*"
sqlx = { version = "*", features = [
    "runtime-actix-native-tls",
    "time",
    "postgres",
    "uuid",
    "chrono",
] }

futures = "*"
dotenv = "0.15.0"
env_logger = "0.10.0"
derive_more = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
lazy_static = "*"
sqlformat = "0.2.1"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
chrono = { version = "0.4.23", features = ["serde"] }
